tests/field/get_on_int.rev
123.bar // error: decimal part is not a number
